# autocommit

./: .coveragerc  .gitignore  Makefile  README.rst  pyproject.toml  ruff.toml
.github/workflows/: ci_cd.yaml  coverage.yaml
autocommit/: __init__.py  build_ragdb.py  commands.py  config.py  git_hooks.py  mistral_model.py  setup.py  utils.py
autocommit/prompts/: final_prompt.txt  not_separated_prompt.txt  start_prompt.txt  system_prompt.txt  title_prompt.txt
basic_rag/: __init__.py  basic_rag.py
doc/source/: conf.py  context.rst  index.rst
doc/source/_autosummary/: autocommit.build_ragdb.rst  autocommit.commands.rst  autocommit.config.rst  autocommit.git_hooks.rst  autocommit.mistral_model.rst  autocommit.rst  autocommit.setup.rst  autocommit.utils.rst  basic_rag.basic_rag.rst  basic_rag.rst  basic_rag.utils.rst  mistral_tools.conversation.rst  mistral_tools.embeddings.rst  mistral_tools.rst  mistral_tools.tool_register.rst  mistral_tools.utils.rst
doc/source/_templates/: custom-module-template.rst
docs/source/: .readme-images
mistral_tools/: __init__.py  conversation.py  embeddings.py  tool_register.py  utils.py
tests/: _socket_toggle.py  conftest.py  test_command_register.py  test_commands.py  test_full.py  test_model.py  test_ragdb.py  test_utils.py  utils.py
