[tool.poetry]
name = "autocommit"
version = "0.1.0"
description = "Automatically generate commit messages from changes"
authors = ["Tristan Brugère <67050900+tbrugere@users.noreply.github.com>"]
license = "Cecill-B"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.12"
mistralai = "^1.2.3"
pygit2 = "^1.16.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
