[tool.poetry]
name = "git_autocommit_hook"
version = "0.1.0"
description = "Automatically generate commit messages from changes"
authors = ["Tristan Brugère <67050900+tbrugere@users.noreply.github.com>"]
license = "Cecill-B"
readme = "README.rst"
packages = [
    { include = "autocommit"}, 
    { include = "mistral_tools"}, 
    { include = "basic_rag"}, 
]

[tool.poetry.dependencies]
python = "^3.10"
mistralai = "^1.2.3"
pygit2 = "^1.16.0"
faiss-cpu = "^1.9.0.post1"
mistral-common = "^1.5.1"
pydantic = "^2.10.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.3"
ruff-lsp = "^0.0.59"
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
pytest-retry = "^1.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
autocommit = 'autocommit:main'

